[tool.poetry]
name = "lab-streamlit"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
